navbar updated to bottstrap 4

--- a/LoginandRegisterMVC/LoginandRegisterMVC.csproj
+++ b/LoginandRegisterMVC/LoginandRegisterMVC.csproj
@@ -134,6 +134,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202010071835182_InitialCreate.cs" />
+    <Compile Include="Migrations\202010071835182_InitialCreate.designer.cs">
+      <DependentUpon>202010071835182_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202010071838131_relatin.cs" />
+    <Compile Include="Migrations\202010071838131_relatin.designer.cs">
+      <DependentUpon>202010071838131_relatin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\UserContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -294,6 +303,14 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202010071835182_InitialCreate.resx">
+      <DependentUpon>202010071835182_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202010071838131_relatin.resx">
+      <DependentUpon>202010071838131_relatin.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
